Fixes missing border for disabled/hidden block

--- a/src/Perplex.ContentBlocks/App_Plugins/Perplex.ContentBlocks/styles/perplex.content-blocks-block.less
+++ b/src/Perplex.ContentBlocks/App_Plugins/Perplex.ContentBlocks/styles/perplex.content-blocks-block.less
@@ -745,10 +745,6 @@
         background: rgba(255,255,255,0.5);
     }
 
-    &__item.is-disabled &__main {
-        border-top: 0;
-    }
-
     &__item.is-disabled &-topbar__text,
     &__item.is-disabled &-topbar__layout__list {
         color: darken(@color-border, 10%);
